# Sentinel-Node

./: README.md  pyproject.toml  requirements.txt
packet_sniffer/: __init__.py  alert_engine.py  analyzer.py  logger.py  simulator.py  sniffer.py
webapp/: app.py
webapp/static/: script.js  style.css
webapp/templates/: index.html
