[tool.poetry]
name = "packet-sniffer"
version = "2.0.1"
description = "A Network Packet Sniffing tool developed in Python 3"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
pyinstaller = "^6.0.0"
netprotocols = "^0.5.0"
flask = "^3.0.0"
scapy = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
